Agent query: Are the new Analyze and Compare buttons visible in the sidebar? Can you access the analysis features for transcripts?
Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/2ffb19e1-6a59-496a-bd94-f453fe62459c/aa822c53-4966-4b6d-ae08-7c6c6683f224.jpg

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ requires-python = ">=3.11"
 dependencies = [
     "google-api-python-client>=2.154.0",
     "isodate>=0.7.2",
+    "nltk>=3.9.1",
     "psycopg2-binary>=2.9.10",
     "streamlit>=1.40.2",
     "youtube-transcript-api>=0.6.3",
