--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "isodate>=0.7.2",
     "nltk>=3.9.1",
     "psycopg2-binary>=2.9.10",
+    "python-dotenv>=1.0.1",
     "streamlit>=1.40.2",
     "youtube-transcript-api>=0.6.3",
 ]
