Agent query: Are the stories now displaying correctly in the video overview page?
Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/2ffb19e1-6a59-496a-bd94-f453fe62459c/7a526cc8-fbf1-468f-a55b-1f11b922d42e.jpg

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,6 @@ dependencies = [
     "psycopg2-binary>=2.9.10",
     "python-dotenv>=1.0.1",
     "streamlit>=1.40.2",
+    "supabase>=2.10.0",
     "youtube-transcript-api>=0.6.3",
 ]
